# AuphonicApp

./: ARCH.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
AuphonicApp/: AuphonicAppApp.swift
AuphonicApp.xcodeproj/: project.pbxproj
AuphonicApp/AuphonicApp/: AuphonicAppApp.swift  ContentView.swift
AuphonicApp/AuphonicApp.icon/: icon.json
AuphonicApp/AuphonicApp.xcodeproj/: project.pbxproj
AuphonicApp/AuphonicAppTests/: AuphonicAPIClientTests.swift  AuphonicModelsTests.swift  BatchWorkflowTests.swift  ChannelTabsStateTests.swift  CreditsCalculationTests.swift  ProcessingWorkflowTests.swift  WavChunkCopierTests.swift
AuphonicApp/Models/: AuphonicModels.swift
AuphonicApp/Services/: AuphonicAPIClient.swift  NotificationService.swift  SettingsManager.swift  WavChunkCopier.swift
AuphonicApp/Views/: AppViewModel.swift  (+6 more)
AuphonicAppTests/: ManualOptionsStateTests.swift  OutputFormatTests.swift  SettingsManagerTests.swift
Packaging/: build.sh  build_and_distribute.sh  distribute.sh
Source/: AudioPlayerComponent.cpp  AudioPlayerComponent.h  AuphonicApiClient.cpp  AuphonicApiClient.h  BatchWorkflow.cpp  BatchWorkflow.h  ChannelTabsComponent.cpp  ChannelTabsComponent.h  CreditsComponent.cpp  CreditsComponent.h  DesktopNotification.h  DesktopNotification.mm  FileDropComponent.cpp  FileDropComponent.h  FileListComponent.cpp  FileListComponent.h  MacStyleLookAndFeel.cpp  MacStyleLookAndFeel.h  Main.cpp  MainComponent.cpp  MainComponent.h  ManualOptionsComponent.cpp  ManualOptionsComponent.h  PresetListComponent.cpp  PresetListComponent.h  PreviewDurationComponent.cpp  PreviewDurationComponent.h  ProcessingWorkflow.cpp  ProcessingWorkflow.h  SettingsComponent.cpp  SettingsComponent.h  SettingsManager.cpp  SettingsManager.h  StatusComponent.cpp  StatusComponent.h  WavChunkCopier.cpp  WavChunkCopier.h
(+10 files in other folders)
